Add basic non-styled UI instead of running in console

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     
+    <button id="btnRock">Rock</button>
+    <button id="btnPaper">Paper</button>
+    <button id="btnScissors">Scissors</button>
+
+    <div id="resultsDisp"></div>
+    <div id="scoreDisp"></div>
+
     <script src="javascript.js"></script>
 
 </body>
