Add very basic css styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="stylesheet.css"></link>
 </head>
 <body>
+    <div id="header">
+        <h1>Game Time</h1>
+    </div>
     
-    <button id="btnRock">Rock</button>
-    <button id="btnPaper">Paper</button>
-    <button id="btnScissors">Scissors</button>
+    <div id="container">
+        <div id="butttons">
+            <button class="button" id="btnRock">Rock</button>
+            <button class="button" id="btnPaper">Paper</button>
+            <button class="button" id="btnScissors">Scissors</button>
+        </div>
 
-    <div id="resultsDisp"></div>
-    <div id="scoreDisp"></div>
+        <div id="resultsDisp"></div>
+        <div id="scoreDisp"></div>
+    </div>
 
     <script src="javascript.js"></script>
 
